--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   --border-color: #eee;
   --bg-color: #f9f9f9;
   --neutral-color: #fff;
+  --hovering-color : rgb(255,45,85);
 }
 
 body {
@@ -27,7 +28,6 @@ body {
 }
 
 ul {
-  margin-top: 2em;
   padding: 0;
   background: rgb(255, 45, 85);
   background: linear-gradient(63deg, rgba(255, 45, 85, 1) 0%, rgba(88, 86, 214, 1) 35%, rgba(90, 200, 250, 1) 100%);
@@ -35,6 +35,7 @@ ul {
 }
 
 li {
+  cursor: pointer;
   text-align: center;
   list-style-type: none;
   color: #fff;
@@ -45,4 +46,8 @@ li:active {
   -webkit-box-shadow: 0px 0px 46px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 0px 46px 0px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 0px 46px 0px rgba(0, 0, 0, 0.75);
+}
+
+li:hover {
+  color: var(--hovering-color)
 }
