updating style of list

--- a/src/App.css
+++ b/src/App.css
@@ -28,26 +28,35 @@ body {
 }
 
 ul {
-  padding: 0;
+  padding: 10px;
   background: rgb(255, 45, 85);
   background: linear-gradient(63deg, rgba(255, 45, 85, 1) 0%, rgba(88, 86, 214, 1) 35%, rgba(90, 200, 250, 1) 100%);
-  width: 40%;
+  height: 700px;
+  overflow: scroll;
+  border-radius: 15px;
+  box-shadow: 0 2px 3px 0 rgba(60, 64, 67, 0.3), 0 6px 10px 4px rgba(60, 64, 67, 0.15)!important
 }
 
 li {
   cursor: pointer;
   text-align: center;
   list-style-type: none;
-  color: #fff;
+  color: var(--text-color-light);
   padding: .75em 0 .75em 0;
 }
 
-li:active {
-  -webkit-box-shadow: 0px 0px 46px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 0px 46px 0px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 0px 46px 0px rgba(0, 0, 0, 0.75);
+li:hover {
+  -webkit-box-shadow: 0px 0px 46px 0px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 0px 0px 46px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 0px 46px 0px rgba(0, 0, 0, 0.5);
+  font-size: 1.1em
 }
 
-li:hover {
-  color: var(--hovering-color)
+.active {
+  color: #fff!important
 }
+
+.col-md-4, .col-md-8 {
+  padding: 0 20px 0 20px!important;
+}
+
