--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,10 @@
   --text-color: #777;
   --text-color-light: #ccc;
   --border-color: #eee;
-  --bg-color: #f9f9f9;
+  --bg-color: #f0eeee;
   --neutral-color: #fff;
-  --hovering-color : rgb(255,45,85);
+  --hovering-color: rgb(255, 45, 85);
+  --big-title-color: rgba(88, 86, 214, 1);
 }
 
 body {
@@ -22,41 +23,100 @@ body {
 
 .header {
   text-align: center;
-  padding: .5em;
+  padding: .2em;
   border-bottom: 1px solid var(--border-color);
   background: var(--neutral-color);
+  margin-bottom: .5em;
+  border-bottom-color: var(--text-color-light);
+  box-shadow: 3px 8px 20px 0px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 3px 8px 20px 0px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 3px 8px 20px 0px rgba(0, 0, 0, 0.2);
+}
+
+.moonlogo {
+  width: 1em;
+  height: auto;
+  margin-bottom: .2em;
+  color: red !important;
 }
 
 ul {
   padding: 10px;
-  background: rgb(255, 45, 85);
-  background: linear-gradient(63deg, rgba(255, 45, 85, 1) 0%, rgba(88, 86, 214, 1) 35%, rgba(90, 200, 250, 1) 100%);
+  background-color: #fff;
   height: 700px;
   overflow: scroll;
   border-radius: 15px;
-  box-shadow: 0 2px 3px 0 rgba(60, 64, 67, 0.3), 0 6px 10px 4px rgba(60, 64, 67, 0.15)!important
+  box-shadow: 0 2px 3px 0 rgba(60, 64, 67, 0.3), 0 6px 10px 4px rgba(60, 64, 67, 0.15) !important
 }
 
 li {
   cursor: pointer;
   text-align: center;
   list-style-type: none;
-  color: var(--text-color-light);
+  color: var(--text-color);
   padding: .75em 0 .75em 0;
 }
 
 li:hover {
-  -webkit-box-shadow: 0px 0px 46px 0px rgba(0, 0, 0, 0.5);
-  -moz-box-shadow: 0px 0px 46px 0px rgba(0, 0, 0, 0.5);
-  box-shadow: 0px 0px 46px 0px rgba(0, 0, 0, 0.5);
-  font-size: 1.1em
+  -webkit-box-shadow: 0px 0px 46px 0px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 0px 46px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 46px 0px rgba(0, 0, 0, 0.2);
+  color: var(--main-color)
 }
 
 .active {
-  color: #fff!important
+  color: var(--hovering-color) !important
 }
 
-.col-md-4, .col-md-8 {
-  padding: 0 20px 0 20px!important;
+.col-md-4,
+.col-md-8 {
+  padding: 0 20px 0 20px !important;
 }
 
+.col-md-4 {
+  padding-left: 50px !important
+}
+
+.title-video {
+  text-align: center;
+  font-size: 1.3em;
+  font-weight: 800;
+  margin-bottom: 0;
+  color: var(--big-title-color)
+}
+
+@-webkit-keyframes GradientAnim {
+  0% {
+    background-position: 0% 50%
+  }
+  50% {
+    background-position: 100% 50%
+  }
+  100% {
+    background-position: 0% 50%
+  }
+}
+
+@-moz-keyframes GradientAnim {
+  0% {
+    background-position: 0% 50%
+  }
+  50% {
+    background-position: 100% 50%
+  }
+  100% {
+    background-position: 0% 50%
+  }
+}
+
+@keyframes GradientAnim {
+  0% {
+    background-position: 0% 50%
+  }
+  50% {
+    background-position: 100% 50%
+  }
+  100% {
+    background-position: 0% 50%
+  }
+}
