--- a/src/App.css
+++ b/src/App.css
@@ -31,14 +31,20 @@ body {
   box-shadow: 3px 8px 20px 0px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 3px 8px 20px 0px rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 3px 8px 20px 0px rgba(0, 0, 0, 0.2);
+  -webkit-animation: color-change 15s infinite;
+    -moz-animation: color-change 15s infinite;
+    -o-animation: color-change 15s infinite;
+    -ms-animation: color-change 15s infinite;
+    animation: color-change 15s infinite;
 }
 
 .moonlogo {
   width: 1em;
   height: auto;
   margin-bottom: .2em;
-  color: red !important;
 }
+
+
 
 ul {
   padding: 10px;
@@ -85,38 +91,73 @@ li:hover {
   color: var(--big-title-color)
 }
 
-@-webkit-keyframes GradientAnim {
-  0% {
-    background-position: 0% 50%
-  }
-  50% {
-    background-position: 100% 50%
-  }
-  100% {
-    background-position: 0% 50%
-  }
+@-webkit-keyframes color-change {
+  0% { color: #E83681; }
+  8.3% { color: #F8DA59; }
+  16.6% { color: #00a73d; }
+  25% { color: orange; }
+  33.3% { color: pink; }
+  41.5% { color: red; }
+  50% { color: blue; }
+  58.1% { color: blueviolet; }
+  66.4% { color: rgb(103, 24, 24); }
+  74.7% { color: rgb(255, 170, 95); }
+  91% { color: rgb(3, 221, 170); }
+  100% { color: black; }
 }
-
-@-moz-keyframes GradientAnim {
-  0% {
-    background-position: 0% 50%
-  }
-  50% {
-    background-position: 100% 50%
-  }
-  100% {
-    background-position: 0% 50%
-  }
+@-moz-keyframes color-change {
+  0% { color: #E83681; }
+  8.3% { color: #F8DA59; }
+  16.6% { color: #00a73d; }
+  25% { color: orange; }
+  33.3% { color: pink; }
+  41.5% { color: red; }
+  50% { color: blue; }
+  58.1% { color: blueviolet; }
+  66.4% { color: rgb(103, 24, 24); }
+  74.7% { color: rgb(255, 170, 95); }
+  91% { color: rgb(3, 221, 170); }
+  100% { color: black; }
 }
-
-@keyframes GradientAnim {
-  0% {
-    background-position: 0% 50%
-  }
-  50% {
-    background-position: 100% 50%
-  }
-  100% {
-    background-position: 0% 50%
-  }
+@-ms-keyframes color-change {
+  0% { color: #E83681; }
+  8.3% { color: #F8DA59; }
+  16.6% { color: #00a73d; }
+  25% { color: orange; }
+  33.3% { color: pink; }
+  41.5% { color: red; }
+  50% { color: blue; }
+  58.1% { color: blueviolet; }
+  66.4% { color: rgb(103, 24, 24); }
+  74.7% { color: rgb(255, 170, 95); }
+  91% { color: rgb(3, 221, 170); }
+  100% { color: black; }
+}
+@-o-keyframes color-change {
+  0% { color: #E83681; }
+  8.3% { color: #F8DA59; }
+  16.6% { color: #00a73d; }
+  25% { color: orange; }
+  33.3% { color: pink; }
+  41.5% { color: red; }
+  50% { color: blue; }
+  58.1% { color: blueviolet; }
+  66.4% { color: rgb(103, 24, 24); }
+  74.7% { color: rgb(255, 170, 95); }
+  91% { color: rgb(3, 221, 170); }
+  100% { color: black; }
+}
+@keyframes color-change {
+  0% { color: #E83681; }
+  8.3% { color: #F8DA59; }
+  16.6% { color: #00a73d; }
+  25% { color: orange; }
+  33.3% { color: pink; }
+  41.5% { color: red; }
+  50% { color: blue; }
+  58.1% { color: blueviolet; }
+  66.4% { color: rgb(103, 24, 24); }
+  74.7% { color: rgb(255, 170, 95); }
+  91% { color: rgb(3, 221, 170); }
+  100% { color: black; }
 }
