adding some anim color to body

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   --text-color: #777;
   --text-color-light: #ccc;
   --border-color: #eee;
-  --bg-color: #f0eeee;
+  --bg-color: #f1f1f1;
   --neutral-color: #fff;
   --hovering-color: rgb(255, 45, 85);
   --big-title-color: rgba(88, 86, 214, 1);
